Made it work in IntelliJ